# umbridge

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  generate-documentation.sh  setup.py
.github/workflows/: benchmark-exahype-tsunami.yml  benchmark-testbenchmark.yml  client-R-cran-package.yml  client-R-git-package.yml  client-R.yml  client-c++-example.yml  client-c++.yml  client-julia-example.yml  client-matlab.yml  client-python-emcee.yml  client-python-example.yml  client-python-pymc.yml  client-python-qmcpy.yml  client-python-raw.yml  client-python-tinyDA.yml  client-python.yml  generate-documentation.yml  hpc-load-balancer.yml  model-exahype-tsunami.yml  model-poisson-mi.yml  model-testmodel-julia.yml  model-testmodel-python.yml  model-testmodel.yml  pip-update.yml  push_benchmark_exahype-tsunami.yml  push_c++-client.yml  push_exahype-tsunami.yml  push_poisson-mi.yml  push_testbenchmark.yml  push_testmodel-python.yml  push_testmodel.yml  sharedmemtest-c++.yml  sharedmemtest-python.yml  sharedmemtest.yml  testing-protocol-conformity-0.9  testing-protocol-conformity-0.9.yml  testing-protocol-conformity-1.0.yml
R/: DESCRIPTION  LICENSE  NAMESPACE
R/R/: umbridge.R
R/man/: apply_hessian.Rd  apply_jacobian.Rd  evaluate.Rd  get_models.Rd  gradient.Rd  model_input_sizes.Rd  model_output_sizes.Rd  protocol_version_supported.Rd  supports_apply_hessian.Rd  supports_apply_jacobian.Rd  supports_evaluate.Rd  supports_gradient.Rd
R/tests/: testthat.R
benchmarks/: README.md
benchmarks/exahype-tsunami/: Dockerfile  benchmark-server.py  httpmodel.py
benchmarks/hippylib-benchmark/: Dockerfile  poisson.py  poisson.yaml  umbridge.py  wrapper.py
benchmarks/poisson-mi/: Dockerfile  benchmark-server.py  httpmodel.py
benchmarks/testbenchmark/: Dockerfile  benchmark-server.py  umbridge.py
clients/: README.md  build.sh  http-client.cpp  http-client.py  httpmodel.py  minimal-client.py  raw-client.py
clients/R/: client.R
clients/c++/: CMakeLists.txt  build.sh  build_win.ps1  http-client.cpp
clients/matlab/: check_sgmk.m  check_tt.m  draft_file.m  matlabClient.m  matlab_client.m  sgmkClient.m  ttClient.m  umbridge_supported_models.m  uqlabClient.m
clients/muq/: CMakeLists.txt  HTTPModPieceClientMCMCPoisson.cpp  PoissonMIModelGraph.h
clients/python/: basic-parallel-client.py  cuqipy-client.py  emcee-client.py  http-client-scipy-QMC.ipynb  http-client.py  httpmodel.py  pymc-client.py  qmcpy-client.py  raw-client.py  tinyDA-client.ipynb  umbridge-client.py  umbridge.py
cmake/: CMakeLists.txt  FindDependencies.cmake  UMBridgeConfig.cmake.in  UmbridgeConfig.cmake  UmbridgeConfig.cmake.in
documentation/: config.dox
exahype-tsunami/: Dockerfile
examples/linear-model/: Dockerfile  LinearModel.hpp  minimal-server.cpp
examples/linear-model/cpp/: CMakeLists.txt  LinearModel.hpp  _evaluate-linear-model.cpp  _minimal-server.cpp
hpc/: HPCIO.hpp  HPCIO.slurm  HPCIOWorker.cpp  LoadBalancer.cpp  LoadBalancer.hpp  LoadBalancer.slurm  Makefile  README.md  http_post.cpp  is_port_free.cpp  model.slurm
hpc/hq_scripts/: allocation_queue.sh  job.sh  setup_model.sh
hpc/lib/: httplib.h  umbridge.h
hpc/slurm_scripts/: job.sh
hpc/test/: testmodel.py
include/umbridge/: ClientModel.hpp  Model.hpp  Pybind11Wrappers.hpp  ServerModel.hpp
joss/: paper.bib  paper.md
julia/: juliaClient.jl
kubernetes/: README.md  exahype-euler.yaml  exahype-tsunami-nfs.yaml  exahype-tsunami.yaml  launch-exahype-tsunami-nfs.sh  launch-multinode-mpi-model.sh  model.yaml  multinode-mpi-model.yaml  nfs-service.yaml  nfs.yaml  sequential-model.yaml  setup.sh  shutdown-exahype-tsunami-nfs.sh
kubernetes/gce-neg/: setup-neg.yml
kubernetes/gke/: README.md
kubernetes/haproxy-networklb/: setup.yml
kubernetes/setup/: haproxy.yaml  nfs-pv-pvc.yaml  nfs.yaml  svc-ingress.yml
lib/: HTTPComm.h  README.md  umbridge.h
markdown/: forward-benchmarks.md  main.md  models.md
matlab/: draft_file.m  umbridge_supported_models.m
matlab/@HTTPModel/: HTTPModel.m  apply_hessian.m  apply_jacobian.m  check_error.m  check_http_status.m  evaluate.m  get_input_sizes.m  get_model_info.m  get_output_sizes.m  gradient.m  send_data.m  supports_apply_hessian.m  supports_apply_jacobian.m  supports_evaluate.m  supports_gradient.m
models/: README.md  test_model_schema.py
models/cuqipy-distribution/: Dockerfile  distribution-server.py
models/cuqipy-model/: Dockerfile  model-server.py
models/exahype-euler/: Dockerfile  HTTPModPieceServerExaHyPE.cpp
models/exahype-tsunami/: Dockerfile  HTTPModPieceServerExaHyPE.cpp  umbridge.h
models/poisson-mi/: Dockerfile  test_model.py  test_model_output.py
models/testmodel/: Dockerfile  HTTPComm.h  build.sh  build_win.ps1  minimal-server.cpp  umbridge.h
models/testmodel-julia/: Dockerfile  minimal-server.jl
models/testmodel-python/: Dockerfile  httpmodel.py  minimal-server.py  umbridge.py
python/: pyproject.toml
python/tests/: autoumbridge_test.py
python/umbridge/: __init__.py  autoumbridge.py  client.py  model.py  server.py
servers/: HTTPComm.h  README.md  build.sh  minimal-server.cpp
source/: about.rst  conf.py  index.rst  mpi_container.rst  quickstart.rst  tutorial.rst
source/_static/: custom.css
source/forward-benchmarks/: cookies-problem-propagation.md  index.rst  l2-sea-propagation.md  muq-beam-propagation.md
source/inverse-benchmarks/: abm-attack-fraction.md  achlys.md  analytic-banana.md  analytic-donut.md  analytic-funnel.md  analytic-gaussian-mixture.md  cuqi-ct.md  deconvolution-1d.md  exahype-tsunami.md  heat-1d.md  index.rst  l2-sea-optimization.md  muq-beam.md  p-poisson.md  poisson.md
source/logos/: UM-bridge.eps
source/models/: achlys.md  cookies-problem.md  dealii-laplace.md  dune-composites.md  emod-abm.md  exahype-tsunami.md  fenics-cookies-problem.md  gs2.md  index.rst  l2-sea.md  muq-beam.md
src/: Model.cpp  ServerModel.cpp
tutorial/: qmcpy-client-l2-sea.py  qmcpy-client-xfoil.py
umbridge/: README.md  __init__.py  emcee.py  model.py  pymc.py  server.py  um.py  umbridge.py
(+32 files in other folders)
